--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,19 @@
     "fix-style": "php-cs-fixer fix ."
   },
   "require": {
-    "php": "^7.1 || ^8.0",
-    "php-http/httplug": "^1.0 || ^2.0",
+    "php": "^7.3.33 || ^8.0",
     "php-http/message": "^1.0",
     "php-http/client-implementation": "^1.0",
     "php-http/discovery": "^1.0",
-    "psr/http-client": "^1.0"
+    "php-http/httplug": "^2",
+    "php-http/guzzle7-adapter": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
-    "php-http/guzzle6-adapter": "^1.0",
     "mockery/mockery": "^1.3",
     "nyholm/nsa": "^1.0",
-    "php-coveralls/php-coveralls": "^2.4",
-    "friendsofphp/php-cs-fixer": "^2.18"
+    "php-coveralls/php-coveralls": "^2.7",
+    "friendsofphp/php-cs-fixer": "^3"
   },
   "autoload": {
     "psr-4": {
@@ -36,6 +35,11 @@
   "autoload-dev": {
     "psr-4": {
       "SparkPost\\Test\\": "test/unit"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "php-http/discovery": true
     }
   }
 }
